// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 eAQKb"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 cYeytb"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a hint color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 bySdFH"
    color="hint"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a info color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 clazgv"
    color="info"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 eAQKb"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="Checkbox-sc-17gwqiq-0 eHlTwv"
    color="warning"
    type="checkbox"
  />
</div>
`;
